@@ -45,10 +45,10 @@ CFindTextDlg::CFindTextDlg (CCrystalTextView * pBuddy)
 , m_bMatchCase(FALSE)
 , m_bWholeWord(FALSE)
 , m_bRegExp(FALSE)
+, m_bNoWrap(FALSE)
 , m_ptCurrentPos(CPoint (0, 0))
 {
-  //{{AFX_DATA_INIT(CFindTextDlg)
-  //}}AFX_DATA_INIT
+  ASSERT (pBuddy != NULL);
 }
 
 void CFindTextDlg::
@@ -63,6 +63,7 @@ DoDataExchange (CDataExchange * pDX)
   DDX_CBString (pDX, IDC_EDIT_FINDTEXT, m_sText);
   DDX_Check (pDX, IDC_EDIT_WHOLE_WORD, m_bWholeWord);
   DDX_Check (pDX, IDC_EDIT_REGEXP, m_bRegExp);
+  DDX_Check (pDX, IDC_FINDDLG_DONTWRAP, m_bNoWrap);
   //}}AFX_DATA_MAP
 }
 
@@ -116,7 +117,7 @@ void CFindTextDlg::OnOK ()
       m_ctlFindText.SaveState(_T("Files\\FindInFile"));
 
       CPoint ptTextPos;
-      if (!m_pBuddy->FindText (m_sText, m_ptCurrentPos, dwSearchFlags, TRUE,
+      if (!m_pBuddy->FindText (m_sText, m_ptCurrentPos, dwSearchFlags, !m_bNoWrap,
           &ptTextPos))
         {
           CString prompt;
@@ -211,6 +212,7 @@ SetLastSearch (LPCTSTR sText, BOOL bMatchCase, BOOL bWholeWord, BOOL bRegExp, in
   lastSearch.m_bRegExp = bRegExp;
   lastSearch.m_nDirection = nDirection;
   lastSearch.m_sText = sText;
+  lastSearch.m_bNoWrap = m_bNoWrap;
 }
 
 
@@ -228,5 +230,5 @@ UseLastSearch ()
   m_bRegExp = lastSearch.m_bRegExp;
   m_nDirection = lastSearch.m_nDirection;
   m_sText = lastSearch.m_sText;
+  m_bNoWrap = lastSearch.m_bNoWrap;
 }
-
